2009-02-17  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdDiscModel.cs: Use
	the SortName information from MusicBrainz, and detect if an album is a
	compilation album and set the album and all the tracks appropriate if it
	is.

	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdRipper.cs: Set the
	FileModifiedStamp and LastSyncedStamp when a track is ripped.

2009-02-16  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Backends/Banshee.Gnome/Banshee.GnomeBackend/GConfConfigurationClient.cs:
	Log exceptions raised when reading a GConf key, if they are not a
	NoSuchKeyException.

2009-02-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Banshee.Base/Tests/FileNamePatternTests.cs: Remove
	old EscapeFilename test.

2009-02-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena/StringUtil.cs: Patch from John Millikin
	revamping the illegal_chars array, removing a bunch of chars that should
	be fine, and making sure it escapes all chars that are invalid in FAT32,
	HFS, and ext3 (BGO #458224).  Changes by me to handle null input, and move
	the Regex creation to static init instead of lazy load.

	* src/Libraries/Hyena/Hyena/Tests/StringUtilTests.cs: Tests for the
	revamped EscapeFilename method.

2009-02-11  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/Column.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ColumnCellText.cs: Patch from
	John Millikin (with some style fixups added in by me) that right-aligns
	the header text for right-aligned columns (BGO #560918)

2009-02-10  Gabriel Burt  <gabriel.burt@gmail.com>

	Patch from Andrés G. Aragoneses fixing bug with string matching functions
	that use the SQL 'like' command not escaping % and _ properly.

	* DateQueryValue.cs:
	* ExactStringQueryValue.cs:
	* IntegerQueryValue.cs:
	* NullQueryValue.cs:
	* RelativeTimeSpanQueryValue.cs: